<resources>
    <string name="app_name">Whatchapp</string>
    <string name="conectar">Conectar</string>
    <string name="puerto">Puerto</string>
    <string name="ip">IP</string>
    <string name="user">Alias</string>
    <string name="servidor">Servidor</string>
    <string name="cliente">Cliente</string>
    <string name="about">Acerca de</string>
    <string name="volver">Volver</string>
    <string name="creditos">Aplicación creada por David Ortiz. Archivos en GitHub, para acceder haga click en el siguiente botón.</string>
</resources>
